test/types/file/unableToOpenFile.chpl
var f = open("_test_cannotOpenMe.txt", "r");

f.close();
